# otel-a2a-relay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LUCA-FLOW-PROGRESS.md  Makefile  README.md  pyproject.toml  tasks.py
.agents/skills/otel-a2a-relay/: SKILL.md
.coily/: coily.yaml
.github/workflows/: luca-demo.yml  regen-gif-baseline.yml
arize_phoenix/: README.md  pyproject.toml
arize_phoenix/docker/: README.md  docker-compose.yml
arize_phoenix/src/otel_a2a_relay_arize_phoenix/: __init__.py  client.py  harness.py
arize_phoenix/src/otel_a2a_relay_arize_phoenix/viz/: __init__.py  model.py  render.py  theme.py
arize_phoenix/tests/: test_client.py  test_phoenix.py  test_viz.py
arize_phoenix/tests/fixtures/: regen_session_gifs.py  sessions.py
channels/: README.md  pyproject.toml
channels/src/otel_a2a_relay_channels/: __init__.py  ids.py  models.py  onboarding.py  router.py
channels/tests/: test_ids.py  test_models.py  test_onboarding.py  test_router.py
core/: README.md  pyproject.toml
core/src/otel_a2a_relay_core/: __init__.py  __main__.py  agent.py  assertions.py  corpus.py  file_emit.py  server.py  span_store.py  store.py  telemetry.py  tracing.py
core/tests/: test_agent.py  test_assertions.py  test_corpus.py  test_file_emit.py  test_routing.py  test_server.py  test_span_store.py  test_star_topology.py  test_store.py  test_telemetry.py  test_tracing.py
core/tests/fixtures/trace_zoo/: README.md  chain_three_hops.json  concurrent_workers.json  hub_topology.json  multi_session.json  peer_404.json  peer_timeout.json  relay_reject_topology.json  single_send_sync.json  star_orchestrator_passthrough.json  streaming_long.json  tool_call_flow.json  user_id_propagation.json  worked_example_canceled.json  worked_example_completed.json  worked_example_failed.json
docs/: FEATURES.md  agent-channel-requests.md  animated-topology.md  channels-protocol-api.md  channels-protocol-events.md  channels-protocol.md  harness.md  luca-flow-demo.md  luca-flow-spans.md  protocol-attributes.md  protocol-conventions.md  protocol-decisions.md  protocol-operator.md  protocol-traces.md  protocol-validation.md  protocol.md  protocols-survey-a2a.md  protocols-survey-acp.md  protocols-survey-agntcy.md  protocols-survey-agora.md  protocols-survey-lmos.md  protocols-survey-mcp.md  protocols-survey-openai.md  protocols-survey-summary.md  protocols-survey.md  quickstart.md
examples/luca-flow/: CITATIONS.md  README.md  pyproject.toml  script.yaml  spec.yaml
examples/luca-flow/assets/fonts/: SOURCES.yaml
examples/luca-flow/assets/img/nasa/: SOURCES.yaml
examples/luca-flow/fixtures/: worker-a-css.css  worker-b-gallery-partial.html  worker-e-science.html  worker-f-product-no-h1.html  worker-h-preorder.html
examples/luca-flow/src/luca/: _clock.py  deployer.py  orchestrator.py  peer.py  planner.py  runner.py  validator.py  worker.py
examples/luca-flow/tests/: conftest.py  test_artifacts.py
harness/: README.md  post_worked_example.py  requirements.txt
scripts/: bg.sh  check-coily-yaml.py  check_luca_spans.py  emit_protocol_artifacts.py  phoenix_bootstrap.py  protocol_decision_log.py  render_topology.py  replay_regen_gif_baseline.sh  wait-healthy.sh
skills/ops-eng-o2r-agent-channel/: SKILL.md
skills/ops-eng-o2r-grafana/: SKILL.md  cheatsheet.md  dashboards.md
skills/ops-eng-o2r-phoenix/: SKILL.md
src/otel_a2a_relay/: __init__.py  __main__.py  agent.py  client.py  harness.py  phoenix.py  server.py  store.py  telemetry.py  tracing.py
src/otel_a2a_relay/luca/: __init__.py  deployer.py  messages.py  orchestrator.py  peer.py  planner.py  runner.py  validator.py  worker.py
src/otel_a2a_relay/viz/: __init__.py  model.py  render.py  theme.py
tempo_grafana/: README.md  pyproject.toml
tempo_grafana/docker/: docker-compose.yml  prometheus.yaml  tempo.yaml
tempo_grafana/docker/grafana/dashboards/: luca-flow.json  o2r-overview.json
tempo_grafana/docker/grafana/provisioning/dashboards/: o2r.yaml
tempo_grafana/docker/grafana/provisioning/datasources/: datasources.yaml  tempo.yaml
tempo_grafana/src/otel_a2a_relay_tempo_grafana/: __init__.py  bootstrap.py  harness.py
tempo_grafana/tests/: test_bootstrap.py
tests/: test_agent.py  test_client.py  test_phoenix.py  test_routing.py  test_server.py  test_star_topology.py  test_store.py  test_telemetry.py  test_tracing.py  test_viz.py
tests/fixtures/: regen_session_gifs.py  sessions.py
tests/luca_flow/: conftest.py  test_visual.py
