[project]
name = "otel-a2a-relay"
version = "0.1.0"
description = "A2A coordination as OTel spans. Drop-in relay between A2A agents that turns wire traffic into traces any OTel-native observability tool can render."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "pyyaml>=6.0",
  "html5lib>=1.1",
]

# Optional extras. The viz extra powers `make gif` and the topology
# GIF visual diff test. Pillow does the rendering; everything else
# the relay needs is already in the base dependency set.
[project.optional-dependencies]
viz = [
  "pillow>=12.2.0",
]

[project.scripts]
otel-a2a-relay = "otel_a2a_relay.__main__:main"
otel-a2a-relay-harness = "otel_a2a_relay.harness:main"
o2r = "otel_a2a_relay.__main__:main"
o2r-harness = "otel_a2a_relay.harness:main"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otel_a2a_relay"]

[tool.hatch.build.targets.wheel.force-include]
"src/otel_a2a_relay/viz/assets/JetBrainsMono-Regular.ttf" = "otel_a2a_relay/viz/assets/JetBrainsMono-Regular.ttf"
"src/otel_a2a_relay/viz/assets/JetBrainsMono-OFL.txt" = "otel_a2a_relay/viz/assets/JetBrainsMono-OFL.txt"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
  "arize-phoenix>=15.0",
  "httpx>=0.28",
  "mypy>=1.20",
  "pillow>=12.2.0",
  "pre-commit>=4.5",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-playwright>=0.7.2",
  "ruff>=0.15",
  "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=src/otel_a2a_relay",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
  "-m",
  "not luca_flow",
  "--ignore=tests/luca_flow",
]
markers = [
  "luca_flow: end-to-end LUCA-flow demo snapshot suite (slow, needs playwright browsers)",
]

[tool.coverage.run]
source = ["src/otel_a2a_relay"]
omit = [
  "src/otel_a2a_relay/luca/*",
  "src/otel_a2a_relay/viz/*",
  "src/otel_a2a_relay/__main__.py",
  "src/otel_a2a_relay/harness.py",
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
