[project]
name = "otel-a2a-relay-workspace"
version = "0.0.0"
description = "Monorepo workspace root for otel-a2a-relay-{core,arize-phoenix,tempo-grafana} + the LUCA-flow demo. This package itself ships nothing; it exists so dev tools (uv, ruff, mypy, pytest) can run across the whole tree from one place."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
# No runtime deps - this package is never published. Each member ships its own.

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["core", "channels", "arize_phoenix", "tempo_grafana", "examples/luca-flow"]

[tool.uv.sources]
otel-a2a-relay-core = { workspace = true }
otel-a2a-relay-channels = { workspace = true }
otel-a2a-relay-arize-phoenix = { workspace = true }
otel-a2a-relay-tempo-grafana = { workspace = true }

[dependency-groups]
dev = [
  # Workspace-wide tools. Each member can add its own dev deps too.
  "mypy>=1.20",
  "pre-commit>=4.5",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.15",
  "pyyaml>=6.0",
  "types-pyyaml>=6.0",
  "httpx>=0.28",
  # Pillow drives the `arize_phoenix.viz` GIF renderer + its tests.
  # In this workspace it's a dev dep so test runs see it; downstream
  # consumers install it via the `viz` extra on otel-a2a-relay-arize-phoenix.
  "pillow>=12.2.0",
  # Phoenix harness wants this for `make luca-test` end-to-end.
  "arize-phoenix>=15.0",
  # Each member references the others by workspace dep so dev deps line up.
  "otel-a2a-relay-core",
  "otel-a2a-relay-channels",
  "otel-a2a-relay-arize-phoenix",
  "otel-a2a-relay-tempo-grafana",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
# The workspace has multiple `tests/` dirs (one per member). Without this,
# mypy collapses them into a single `tests` namespace and complains about
# duplicate modules. Each tests dir gets a distinct module path keyed off
# the package root.
mypy_path = "core/src:channels/src:arize_phoenix/src:tempo_grafana/src:examples/luca-flow/src"

[[tool.mypy.overrides]]
# `tests.fixtures.sessions` is consumed by arize_phoenix/tests/test_viz.py
# and the regen script; it's not part of any importable package.
module = "tests.*"
disallow_untyped_decorators = false

[tool.pyright]
venvPath = "."
venv = ".venv"

# Temporary excludes: agentic-os pre-commit hooks. Tracks otel-a2a-relay#17,
# which will split oversized docs and SKILL.md files. Drop entries here as
# the splits land. Workspace-member READMEs and generated artifacts are
# long-term excludes (the layout rule does not fit a uv workspace).
[tool.agentic-os.documentation-layout]
excludes = [
  "docs/generated/**",
  "arize_phoenix/README.md",
  "arize_phoenix/docker/README.md",
  "channels/README.md",
  "core/README.md",
  "core/tests/fixtures/trace_zoo/README.md",
  "examples/luca-flow/README.md",
  "examples/luca-flow/CITATIONS.md",
  "tempo_grafana/README.md",
  "docs/FEATURES.md",
  "docs/channels-protocol.md",
  "docs/protocol.md",
  "docs/protocols-survey.md",
  "skills/ops-eng-o2r-agent-channel/SKILL.md",
  "skills/ops-eng-o2r-grafana/SKILL.md",
  "skills/ops-eng-o2r-phoenix/SKILL.md",
]

[tool.agentic-os.catalog-doc-size]
excludes = [
  "docs/FEATURES.md",
  "docs/channels-protocol.md",
  "docs/protocol.md",
  "docs/protocols-survey.md",
  "examples/luca-flow/README.md",
  "skills/ops-eng-o2r-agent-channel/SKILL.md",
  "skills/ops-eng-o2r-grafana/SKILL.md",
  "skills/ops-eng-o2r-phoenix/SKILL.md",
  "tempo_grafana/README.md",
]

[tool.agentic-os.code-comments]
excludes = [".claude/lockdown-deny.sh"]
