[project]
name = "otel-a2a-relay-core"
version = "0.3.0"
description = "Backend-agnostic core of the otel-a2a-relay protocol: relay HTTP server, OTel tracing bootstrap, A2A peer agent. Ships no backend coupling - point it at any OTLP/HTTP collector via OTEL_EXPORTER_OTLP_ENDPOINT."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "openinference-instrumentation>=0.1.40",
]

[project.scripts]
o2r-relay = "otel_a2a_relay_core.__main__:main"
o2r-agent = "otel_a2a_relay_core.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otel_a2a_relay_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=src/otel_a2a_relay_core",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
source = ["src/otel_a2a_relay_core"]
omit = [
  "src/otel_a2a_relay_core/__main__.py",
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]
