[project]
name = "luca-flow-example"
version = "0.3.0"
description = "End-to-end demo of the otel-a2a-relay protocol: AURORA microsite built by a star-topology multi-agent flow (orchestrator, planner, validator, eight workers, deployer). Backend-agnostic - point OTEL_EXPORTER_OTLP_ENDPOINT at any OTLP/HTTP collector (Phoenix, Tempo, ...) to see the spans."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "otel-a2a-relay-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "html5lib>=1.1",
  "openinference-instrumentation>=0.1.40",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
]

[project.scripts]
luca-flow = "luca.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luca"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Demo coverage is locked via byte-snapshots in tests/snapshots, not via
# stmt coverage.
addopts = [
  "--no-cov",
]
markers = [
  "luca_flow: end-to-end LUCA-flow demo snapshot suite (slow, runs subprocesses)",
]
